--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: HarveyMao0720.github.io
 # Owner/author information
 owner:
   name: Haoran Mao
-  avatar: profile.jpg
+  avatar: /images/profile.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: haoran_mao@163.com
   cv: #https://caihanlin.com/file/CV-HanlinCAI.pdf
