--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ url: HarveyMao0720.github.io
 # Owner/author information
 owner:
   name: Haoran Mao
-  avatar: /images/profile.jpg
+  avatar: https://HarveyMao0720.github.io/images/profile.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: haoran_mao@163.com
-  cv: #https://caihanlin.com/file/CV-HanlinCAI.pdf
+  cv: https//HarveyMao0720.github.io/file/CV_mhr.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: #lancecai2002
   github: #GuangLun2000
@@ -38,8 +38,6 @@ google_verify: #"SkiyuGpJOKT74vv5GmXLvYXXDkXy4v8VWPtbelYz3Hs"
 links:
   - title: About Me
     url: /
-  - title: Projects
-    url: /projects/
 
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
