--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ url: HarveyMao0720.github.io
 # Owner/author information
 owner:
   name: Haoran Mao
-  avatar: https://HarveyMao0720.github.io/images/profile.jpg
+  avatar: profile.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: haoran_mao@163.com
-  cv: https//HarveyMao0720.github.io/file/CV_mhr.pdf
+  cv: https://HarveyMao0720.github.io/file/CV_mhr.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: #lancecai2002
   github: #GuangLun2000
