--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@ title: Haoran Mao
 # tagline: Here is personal website of Haoran Mao. Powered by Jekyll, based on the Minimal Mistakes theme.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
-url: HarveyMao0720.github.io
+url: https://HarveyMao0720.github.io
 
 # Owner/author information
 owner:
   name: Haoran Mao
-  avatar: <img src="https://HarveyMao0720.github.io/images/life.jpg">
+  avatar: haoran.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: haoran_mao@163.com
   cv: https://HarveyMao0720.github.io/file/CV_mhr.pdf
