--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,10 @@ google_verify: #"SkiyuGpJOKT74vv5GmXLvYXXDkXy4v8VWPtbelYz3Hs"
 # Links to include in top navigation
 # For external links add external: true
 links:
-  - title: About Me
+  - title: EN
     url: /
+  - title: ZH-CN
+    url: /zh/
 
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
